--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Slack Notification on Failure
 
 on:
   push:
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     # slack notification
     steps:
-      - name: Slack Notification on Failure
-        uses: rtCamp/action-slack-notify@v2.2.0
-        env:
-          SLACK_USERNAME: rtBot (GitHub Actions)
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_TITLE: masterに反映されました🎉
-          SLACK_COLOR: good
-          SLACK_MESSAGE: <${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}>
-          MSG_MINIMAL: true
+      uses: rtCamp/action-slack-notify@v2.2.0
+      env:
+        SLACK_USERNAME: rtBot (GitHub Actions)
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_TITLE: masterに反映されました🎉
+        SLACK_COLOR: good
+        SLACK_MESSAGE: ${{ github.event.repository.url }}
+        MSG_MINIMAL: true
