--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "wp:setup": "npm run wp:start && npm run db:import",
     "wp:destroy": "npm run wp:env destroy",
     "lint:check": "npm run lint:style && npm run lint:es",
-    "lint:style": "stylelint 'assets/**/*.{css,scss}'",
-    "lint:es": "eslint 'assets/**/*.js'",
-    "lint:fix": "stylelint --fix 'assets/**/*.{css,scss}' && eslint --fix 'assets/**/*.js'",
-    "format": "prettier --write 'assets/**/*.{html,css,scss,js,json}'",
+    "lint:style": "stylelint 'src/assets/**/*.{css,scss}'",
+    "lint:es": "eslint 'src/assets/**/*.js'",
+    "lint:fix": "stylelint --fix 'src/assets/**/*.{css,scss}' && eslint --fix 'src/assets/**/*.js'",
+    "format": "prettier --write 'src/assets/**/*.{html,css,scss,js,json}'",
     "prepare": "husky install"
   },
   "lint-staged": {
