--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
     "wp:restart": "npm run wp:env start --update",
     "wp:setup": "npm run wp:start && npm run db:import",
     "wp:destroy": "npm run wp:env destroy",
-    "lint:check": "npm run lint:style && npm run lint:es",
+    "lint:check": "npm run lint:html && npm run lint:style && npm run lint:es",
+    "lint:html": "markuplint 'src/**/*.{html,php}'",
     "lint:style": "stylelint 'src/assets/**/*.{css,scss}'",
     "lint:es": "eslint 'src/assets/**/*.js'",
-    "lint:fix": "stylelint --fix 'src/assets/**/*.{css,scss}' && eslint --fix 'src/assets/**/*.js'",
-    "format": "prettier --write 'src/assets/**/*.{html,css,scss,js,json}'",
+    "lint:fix": "markuplint 'src/**/*.{html,php}' && stylelint --fix 'src/assets/**/*.{css,scss}' && eslint --fix 'src/assets/**/*.js'",
+    "format": "prettier --write 'src/assets/**/*.{html,css,scss,js,json,php}'",
     "prepare": "husky install"
   },
   "lint-staged": {
+    "*.{html,php}": "markuplint",
     "*.{js}": "eslint --fix",
     "*.{css,scss}": "stylelint --fix",
-    "*.{html,css,scss,js,json}": "prettier --write"
+    "*.{html,css,scss,js,json,php}": "prettier --write"
   },
   "author": "HISAMI KURITA",
   "license": "ISC",
   "devDependencies": {
+    "@markuplint/php-parser": "^3.10.0",
     "@wordpress/env": "^5.15.0",
     "autoprefixer": "^10.4.14",
     "commander": "^11.0.0",
@@ -40,6 +43,7 @@
     "gsap": "^3.12.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "markuplint": "^3.13.0",
     "path": "^0.12.7",
     "postcss": "^8.4.22",
     "prettier": "^2.8.8",
