--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "lint:style": "stylelint 'src/assets/**/*.{css,scss}'",
     "lint:es": "eslint 'src/assets/**/*.js'",
     "lint:fix": "markuplint 'src/**/*.{html,php}' && stylelint --fix 'src/assets/**/*.{css,scss}' && eslint --fix 'src/assets/**/*.js'",
-    "format": "prettier --write 'src/assets/**/*.{html,css,scss,js,json,php}'",
+    "format": "prettier --write 'src/**/*.{html,css,scss,js,json}'",
     "prepare": "husky install"
   },
   "lint-staged": {
     "*.{html,php}": "markuplint",
     "*.{js}": "eslint --fix",
     "*.{css,scss}": "stylelint --fix",
-    "*.{html,css,scss,js,json,php}": "prettier --write"
+    "*.{html,css,scss,js,json}": "prettier --write"
   },
   "author": "HISAMI KURITA",
   "license": "ISC",
   "devDependencies": {
     "@markuplint/php-parser": "^3.10.0",
+    "@prettier/plugin-php": "^0.20.1",
     "@wordpress/env": "^5.15.0",
     "autoprefixer": "^10.4.14",
     "commander": "^11.0.0",
@@ -46,15 +47,14 @@
     "markuplint": "^3.13.0",
     "path": "^0.12.7",
     "postcss": "^8.4.22",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "sass": "^1.62.0",
     "sharp": "^0.32.6",
     "stylelint": "^15.7.0",
     "stylelint-config-recess-order": "^4.2.0",
     "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-prettier": "^3.0.0",
+    "stylelint-prettier": "^4.0.2",
     "svgo": "^3.0.2",
-    "tailwindcss": "^3.3.1",
     "vite": "^4.2.0",
     "vite-plugin-live-reload": "^3.0.2",
     "vite-plugin-sass-glob-import": "^2.0.0",
