update: アップロード上限等を上げる

--- a/uploads/.htaccess
+++ b/uploads/.htaccess
@@ -4,6 +4,11 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteOptions Inherit
+
+  RewriteCond %{QUERY_STRING} original$
+  RewriteCond %{REQUEST_FILENAME} -f
+  RewriteRule . - [L]
+
   RewriteCond %{HTTP_ACCEPT} image/avif
   RewriteCond %{REQUEST_FILENAME} -f
   RewriteCond %{DOCUMENT_ROOT}/wp-content/uploads-webpc/uploads/$1.jpg.avif -f
@@ -20,10 +25,7 @@
   RewriteCond %{REQUEST_FILENAME} -f
   RewriteCond %{DOCUMENT_ROOT}/wp-content/uploads-webpc/uploads/$1.webp.avif -f
   RewriteRule (.+)\.webp$ /wp-content/uploads-webpc/uploads/$1.webp.avif [NC,T=image/avif,L]
-</IfModule>
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteOptions Inherit
+
   RewriteCond %{HTTP_ACCEPT} image/webp
   RewriteCond %{REQUEST_FILENAME} -f
   RewriteCond %{DOCUMENT_ROOT}/wp-content/uploads-webpc/uploads/$1.jpg.webp -f
@@ -36,10 +38,6 @@
   RewriteCond %{REQUEST_FILENAME} -f
   RewriteCond %{DOCUMENT_ROOT}/wp-content/uploads-webpc/uploads/$1.png.webp -f
   RewriteRule (.+)\.png$ /wp-content/uploads-webpc/uploads/$1.png.webp [NC,T=image/webp,L]
-  RewriteCond %{HTTP_ACCEPT} image/webp
-  RewriteCond %{REQUEST_FILENAME} -f
-  RewriteCond %{DOCUMENT_ROOT}/wp-content/uploads-webpc/uploads/$1.webp.webp -f
-  RewriteRule (.+)\.webp$ /wp-content/uploads-webpc/uploads/$1.webp.webp [NC,T=image/webp,L]
 </IfModule>
 # ! --- DO NOT EDIT NEXT LINE --- !
 # END Converter for Media
