--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:export": "npm run wp:env run cli wp db export sql/wpenv.sql; gzip -f sql/wpenv.sql",
     "wp:env": "wp-env",
     "wp:start": "npm run wp:env start",
-    "wp:restart": "npm run wp:env start --update",
+    "wp:restart": "npm run wp:env start --update && npm run wp:env run cli 'wp rewrite flush --hard'",
     "wp:setup": "npm run wp:start && npm run db:import && npm run wp:env run cli 'wp rewrite flush --hard'",
     "wp:destroy": "npm run wp:env destroy",
     "lint:check": "npm run lint:html && npm run lint:style && npm run lint:es",
