--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,5 @@
   "rules": {
     "no-console": "error"
   },
-  "ignorePatterns": ["/node_modules/", "/dist/"]
+  "ignorePatterns": ["/node_modules/", "/dist/", "/plugins/"]
 }
