--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,5 +15,9 @@
     "selector-pseudo-element-no-unknown": null,
     "prettier/prettier": true
   },
-  "ignoreFiles": ["node_modules/", "src/assets/css/base/_destyle.scss"]
+  "ignoreFiles": [
+    "node_modules/",
+    "src/assets/css/base/_destyle.scss",
+    "plugins/**/*"
+  ]
 }
