--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-prettier": "^4.0.2",
     "svgo": "^3.0.2",
+    "typescript": "^5.5.4",
     "vite": "^4.2.0",
     "vite-plugin-browser-sync": "^1.0.6",
     "vite-plugin-live-reload": "^3.0.2",
