--- a/.editorconfig
+++ b/.editorconfig
@@ -8,9 +8,7 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-tab_width = 2
-indent_size = 4
-indent_style = space
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 1200
